This commit is essentially notes and thoughts. I'll begin working on views/templates/navbar stuff after this

--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,7 @@
   <div class='jumbotron text-center'>
     <a href=#>
     <h3>Design your Solar System Today</h3>
-    <p>Use are state of the art solar system designer</p>
+    <p>Use our state of the art solar system designer</p>
   </a>
   </div>
 </div>
