--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% block title %}Team Touchstone{% endblock %}</title>
+    <title>{% block title %}Adventure Solar{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     {% block stylesheet %}{% endblock %}
   </head>
@@ -13,12 +13,22 @@
    {% block body %}
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand" href=#>Adventure Solar</a>
-        <a class="navbar-item" href=#>System Designer</a>
-        <a class="navbar-item" href=#>Store</a>
+        <a class="navbar-brand" href='#'>Adventure Solar</a>
+
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
+        <div class="collapse navbar-collapse" id="mainMenu">
+
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+
+
+                <a class="navbar-link text-light" href='#'>System Designer</a>
+                <a class="navbar-link text-light" href='#'>Store</a>
+              </li>
+            </ul>
+          </div>
         <div class="collapse navbar-collapse" id="mainMenu">
           {% if user.is_authenticated %}
                 <ul class="navbar-nav ml-auto">
