--- a/System_Designer/templates/System_Designer/sd_load.html
+++ b/System_Designer/templates/System_Designer/sd_load.html
@@ -11,6 +11,7 @@
   <p>there needs to be a picture in here somewhere</p>
 <h3>{{form}}</h3>
 
+{% include 'sdNavbar.html' %}
 {% endblock %}
 
 //it may be a good idea to actually build a separate app for the load profile. Because we're gonna be adding, removing and developing items,
