--- a/System_Designer/templates/System_Designer/sd_locations.html
+++ b/System_Designer/templates/System_Designer/sd_locations.html
@@ -5,6 +5,7 @@
 {% endblock %}
 {% block content %}
 <p>{{test}}</p>
+{% include 'sdNavbar.html' %}
 {% endblock %}
 
-//What preference items did you have in mind for here?
+//this will be all of the location information. Hopefully with some cool interactive maps!
