--- a/System_Designer/templates/System_Designer/sd_preferences.html
+++ b/System_Designer/templates/System_Designer/sd_preferences.html
@@ -5,6 +5,7 @@
 {% endblock %}
 {% block content %}
 <p>{{test}}</p>
+{% include 'sdNavbar.html' %}
 {% endblock %}
 
-//is this the intro page?
+//What preference items did you have in mind for here?
