--- a/System_Designer/templates/System_Designer/sd_recommendation.html
+++ b/System_Designer/templates/System_Designer/sd_recommendation.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block content %}
 <p>{{test}}</p>
+{% include 'sdNavbar.html' %}
 {% endblock %}
 
-//pull in all of the vehicle specific details, overall length, height, mounting type, etc. we should make sure to inclue links to all relevant install
-documentation that I'll be writing. 
+//this is to be the page that displays the several options based on the load profile, travel habits, available products, etc.
