--- a/System_Designer/templates/System_Designer/sd_install.html
+++ b/System_Designer/templates/System_Designer/sd_install.html
@@ -5,6 +5,8 @@
 {% endblock %}
 {% block content %}
 <p>{{test}}</p>
+{% include 'sdNavbar.html' %}
 {% endblock %}
 
-//this is to be the page that displays the several options based on the load profile, travel habits, available products, etc.
+//pull in all of the vehicle specific details, overall length, height, mounting type, etc. we should make sure to inclue links to all relevant install
+documentation that I'll be writing. 
