--- a/templates/base.html
+++ b/templates/base.html
@@ -5,66 +5,135 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}Adventure Solar{% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    {% block stylesheet %}{% endblock %}
+    {% load staticfiles %}
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Lato|Oswald:300" rel="stylesheet"> <!--Font Styles LATO and OSWALD -->
+    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script> <!-- Font Awesome Glyphicons Biatch! -->
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/hover.css' %}">
+    <!--<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"> Commented out to ensure was on most recent bootstrap 4-->
+    
+    <!-- {% block stylesheet %}{% endblock %} -->
   </head>
   <body>
+    <!-- Build Navbar as header -->
+    <nav class="navbar main-nav navbar-toggleable-md navbar-inverse bg-inverse ">
+      <!-- Navbar Toggle Button for small format screens -->
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#menuBar" aria-controls="menuBar" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <a class="navbar-brand" href="{% url 'splash' %}">AdventureSolar</a>
+    
+      <!-- mainMenu Items -->
+      <div class="collapse navbar-collapse" id="menuBar">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item hvr-underline-from-center">
+                <a class="nav-link {% if request.path == '/' %}active{% endif %}" href="{% url 'splash' %}">
+                  <span class="fas fa-home"></span>&nbsp; Home
+                </a>
+            </li>
+            <li class="nav-item hvr-underline-from-center">
+                <a class="nav-link {% if '/systemdesign/' in request.path %}active{% endif %}" href="{% url 'SDhome' %}">
+                  <span class="fas fa-th"></span>&nbsp; System Designer
+                </a>
+            </li>
+            <li class="nav-item hvr-underline-from-center">
+                <a class="nav-link {% if '/info/' in request.path %}active{% endif %}" href="{% url 'infoHome' %}">
+                  <span class="far fa-file-alt"></span>&nbsp; Resources
+                </a>
+            </li>
+            <li class="nav-item hvr-underline-from-center">
+                <a class="nav-link {% if '/store/' in request.path %}active{% endif %}" href="{% url 'storeHome' %}">
+                  <span class="fas fa-tags"></span>&nbsp; Store
+                </a>
+            </li>
+        </ul>
 
-   {% block body %}
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-      <div class="container">
-        <a class="navbar-brand" href='#'>Adventure Solar</a>
-
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="mainMenu">
-
-        <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav">
           <li class="nav-item">
-
-
-                <a class="navbar-link text-light" href='#'>System Designer</a>
-                <a class="navbar-link text-light" href='#'>Store</a>
-              </li>
-            </ul>
+            <a class="nav-link" href="#">
+              <span class="fas fa-shopping-cart"></span>
+            </a>
+          </li>
+        </ul>
+        
+        <form class="form-inline my-2 my-lg-0">
+          <div class="nav-item">
+            <input class="form-control mr-sm-2" type="text" placeholder="Search Website">
+            <button class="btn btn-outline-info my-2 my-sm-0" type="submit"><span class="fas fa-search"></span></button>
           </div>
-        <div class="collapse navbar-collapse" id="mainMenu">
+        </form>
+               
+      
+        <div class="navbar-nav">
           {% if user.is_authenticated %}
-                <ul class="navbar-nav ml-auto">
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id='userMenu' data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      {{ user.username }}
-                    </a>
-                   <div class='dropdown-menu dropdown-menu-right' aria-labelledby="userMenu">
-                     <a class="dropdown-item" href="#">My Account</a>
-                     <a class="dropdown-item" href="#">Change Password</a>
-                     <div class="dropdown-divider"></div>
-                     <a class="dropdown-item" href=#>Logout</a>
-                   </div>
-                  </li>
-                </ul>
-                {% else %}
-                <form class="form-inline ml-auto">
+              <ul class="navbar-nav my-2 my-lg-0">
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle dropdown-toggle-split" href="#" id='userMenu' data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    {{ user.username }}
+                  </a>
+                  <div class='dropdown-menu dropdown-menu-right' aria-labelledby="userMenu">
+                    <a class="dropdown-item" href="#">My Account</a>
+                    <a class="dropdown-item" href="#">Change Password</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href=#>Logout</a>
+                  </div>
+                </li>
+              </ul>
+              {% else %}
+              <form class="form-inline ml-auto">
                 <a href=# class="btn btn-outline-secondary">Log in</a>
                 <a href=# class="btn btn-primary ml-2">Sign up</a>
-            </form>
-            {% endif %}
-              </div>
+              </form>
+          {% endif %}
+        </div>
       </div>
+      
+      
     </nav>
 
+    {% block body %}
     <div class="container">
       <ol class="breadcrumb my-4">
+
         {% block breadcrumb %}
         {% endblock %}
+
       </ol>
       {% block content %}
       {% endblock %}
     </div>
+
+    {% block botNav %}
+    {% endblock %}
+
     {% endblock body %}
     <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
     <script src="{% static 'js/popper.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
   </body>
 </html>
+
+        <!-- Moved this hear to clean it up until I figure out how to re-implement, lol 
+        <div class="collapse navbar-collapse" id="mainMenu">
+          {% if user.is_authenticated %}
+              <ul class="navbar-nav ml-auto">
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id='userMenu' data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    {{ user.username }}
+                  </a>
+                  <div class='dropdown-menu dropdown-menu-right' aria-labelledby="userMenu">
+                    <a class="dropdown-item" href="#">My Account</a>
+                    <a class="dropdown-item" href="#">Change Password</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href=#>Logout</a>
+                  </div>
+                </li>
+              </ul>
+              {% else %}
+              <form class="form-inline ml-auto">
+                <a href=# class="btn btn-outline-secondary">Log in</a>
+                <a href=# class="btn btn-primary ml-2">Sign up</a>
+              </form>
+          {% endif %}
+        </div> -->
