Started Building Product Models

--- a/templates/store.html
+++ b/templates/store.html
@@ -7,7 +7,7 @@
 <div class="container">
   <div class='jumbotron text-center'>
     <a href=#>
-    <h3>BUY OUR SHIT</h3>
+    <h3>Buy shiny Things</h3>
     <p>Browse our thousands of products available.</p>
   </a>
   </div>
