Progress on forms logic, added load accessoryform, design profile form, built in table funtionality to display acceassories.

--- a/System_Designer/templates/System_Designer/SDhome.html
+++ b/System_Designer/templates/System_Designer/SDhome.html
@@ -7,7 +7,7 @@
 {% block content %}
 <div class="container">
   <div class='jumbotron text-center'>
-    <a href=#>
+    <a href="{% url 'SD_summary' %}">
     <h1>System Designer</h1>
     <p>The only comprehensive and instant solar system designer!</p>
   </a>
