--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
 {% block content %}
 <div class="container">
   <div class='jumbotron text-center'>
-    <a href=#>
+    <a href="{% url 'SD_home' %}">
     <h3>Design your Solar System Today</h3>
     <p>Use our state of the art solar system designer</p>
   </a>
