--- a/templates/sdNavbar.html
+++ b/templates/sdNavbar.html
@@ -17,7 +17,7 @@
         <a class="nav-link {% if '/systemdesign/locations/' in request.path %}active{% endif %}" href="{% url 'SD_locations' %}"><i class="fas fa-globe"></i>Locations</a>
       </li>
       <li class="nav-item hvr-float">
-        <a class="navbar-brand hidden-md-down" href="{% url 'SDhome' %}">SystemDesigner</a>
+        <a class="navbar-brand hidden-md-down" href="{% url 'SD_home' %}">SystemDesigner</a>
       </li>
       <li class="nav-item hvr-float">
         <a class="nav-link {% if '/systemdesign/preferences/' in request.path %}active{% endif %}" href="{% url 'SD_preferences' %}"><i class="fas fa-sliders-h"></i>Preferences</a>
