Figured out how to make load profile look closer to what i wanted.

--- a/System_Designer/templates/System_Designer/sd_load.html
+++ b/System_Designer/templates/System_Designer/sd_load.html
@@ -6,12 +6,15 @@
 <li class="breadcrumb-item active">Where we are</li>
 {% endblock %}
 {% block content %}
-<p>{{test}}</p>
-<p>This is the page where we find out how much power your plan on using</p>
-<p>This is our load profile builder. How detailed do we want to be?</p>
-<p>The form below will take input from the user. YOU!</p>
-<p>there needs to be a picture in here somewhere</p>
-<p>Add a table to display all the accesories, create column to modify an accessory</p>
+<h1>Welcome to the Load Profile tool!</h1>
+<p>This is where you will add, and edit all of the components that will be drawing power in your system. <br>
+  <br>Add everything! Phones, computers, lights, microwaves, refridgerators, water pumps and anything else.
+  <br>The more accurate the profile you build here is, the better the system will work to your needs.
+  <strong>This is the most critical information in determining the components and size of the system you require.</strong>
+  If this is not accurate, the system can not be guarinteed.<br><br>
+  To start, Simply select a preset item, or make your own.
+</p>
+
 
 {% render_table table %}
 
