--- a/System_Designer/templates/System_Designer/sd_recommendation.html
+++ b/System_Designer/templates/System_Designer/sd_recommendation.html
@@ -1,11 +1,32 @@
 {% extends 'base.html' %}
+{% load django_tables2 %}
+
 {% block breadcrumb %}
 <li class="breadcrumb-item">Where we came from</li>
 <li class="breadcrumb-item active">Where we are</li>
 {% endblock %}
 {% block content %}
-<p>{{test}}</p>
+<h1>Welcome to the Load Summary!</h1>
+<p>The following will display the best options for your system design
+</p>
+
+{% render_table table2 %}
+
+<h3 class="mb-5">
+          <form method="post" novalidate>
+            {% csrf_token %}
+            {% include 'include/form.html' %}
+
+            <button type="submit" class="btn btn-success">Add Another Accessory!</button>
+            <a class="btn btn-success" href="{% url 'create_custom_accessory' %}">Create Custom Accessory</a>
+            <a class="btn btn-success" href="{% url 'SD_locations' %}">Finished</a>
+
+          </form>
+</h3>
+
 {% include 'sdNavbar.html' %}
 {% endblock %}
 
-//this is to be the page that displays the several options based on the load profile, travel habits, available products, etc.
+//it may be a good idea to actually build a separate app for the load profile. Because we're gonna be adding, removing and developing items,
+//it may make more sense to just break it out. Use an "admin" like view for editing that information. Offer an easy portal for customers
+//to directly edit their "database" of items, but reference our pre-populated one.
