Fixed regression model, table formatting is accessed and ready to go with examples setup, all battery counts are fixed and count table is filtered to relevant battery banks, location page setup, and fixed days autonomous reference. Need to fix error when no batteries are adequate for design profile (index error). Want to add column for total ah supplied by battery bank.

--- a/System_Designer/templates/System_Designer/sd_load.html
+++ b/System_Designer/templates/System_Designer/sd_load.html
@@ -24,7 +24,7 @@
             {% csrf_token %}
             {% include 'include/form.html' %}
 
-            <button type="submit" class="btn btn-success">Add Another Accessory!</button>
+            <button type="submit" class="btn btn-success">Add Accessory!</button>
             <a class="btn btn-success" href="{% url 'create_custom_accessory' %}">Create Custom Accessory</a>
             <a class="btn btn-success" href="{% url 'SD_locations' %}">Finished</a>
 
