Added system level column, cleaned up button flow through system designer, incorporated prediction from regression

--- a/System_Designer/templates/System_Designer/sd_locations.html
+++ b/System_Designer/templates/System_Designer/sd_locations.html
@@ -6,15 +6,14 @@
 {% endblock %}
 {% block content %}
 <p>{{test}}</p>
+<p>This be where all the crazy goes down. Select your region.</p>
 
 <h3 class="mb-5">
           <form method="post" novalidate>
             {% csrf_token %}
             {% include 'include/form.html' %}
 
-            <button type="submit" class="btn btn-success">Add Another Accessory!</button>
-            <a class="btn btn-success" href="{% url 'create_custom_accessory' %}">Create Custom Accessory</a>
-            <a class="btn btn-success" href="{% url 'SD_locations' %}">Finished</a>
+            <button type="submit" class="btn btn-success">Update Location</button>
 
           </form>
 </h3>
