--- a/System_Designer/templates/System_Designer/sd_summary.html
+++ b/System_Designer/templates/System_Designer/sd_summary.html
@@ -35,7 +35,7 @@
 
               <button type="submit" class="btn btn-success">Confirm</button>
               <a class="btn btn-success" href="{% url 'create_DP' %}">Create New Profile</a>
-              <a class="btn btn-success" href="{% url 'SD_locations' %}">Finished</a>
+              <a class="btn btn-success" href="{% url 'SD_load' %}">Finished</a>
 
             </form>
   </h3></div>
