--- a/System_Designer/templates/System_Designer/create_DP.html
+++ b/System_Designer/templates/System_Designer/create_DP.html
@@ -5,5 +5,6 @@
   {% include 'include/form.html' %}
 
   <button type="submit" class="btn btn-success">Submit</button>
+  <a class="btn btn-success" href= '{% url "SD_summary" %}'>Cancel</a>
 </form>
 {% endblock %}
